# eletroAlpha

./: .gitignore  DARK_THEME_UPDATE.md  EletricProject.py  Eletro_locator.py  GerarUnifilar.py  Init.py  InitGui.py  InitGui.py.old  InsertComponent.py  ManagerWorkbench.py  NewProject.py  Planejamento.md  ProjetoQuadro.py  README.md  Reports.py  SISTEMA_COMPONENTES_RESUMO.md  Tools.py  WorkbenchBase.py  importQEletrotech.py  package.xml  packege.xml  pyproject.toml  pytest.ini  requirements.txt  test_doc1.20260518-193728.FCBak  test_doc1.FCStd  test_doc2.20260518-193728.FCBak  test_doc2.FCStd  test_link.py
.github/prompts/: plan-eletroAlpha.prompt.md
Componentes/Eletrica/: Caixa_Distribuicao_Embutir.20260408-195438.FCBak  Caixa_Distribuicao_sem_Tampa.FCStd  Caixa_de_passagem_iluminacao_Spot_Laje.20260408-195647.FCBak  Conj_Tomada_Antena_Cabo_de_Rede.20260408-195509.FCBak  Conj_iluminacao_Spot_Laje.20260408-195553.FCBak  Disjuntor_Bifasio.20260408-195520.FCBak  Disjuntor_Monofasio.20260408-200000.FCBak  Disjuntor_Monofasio.FCStd  Interruptor_1botoes.FCStd  Interruptor_2botoes.FCStd  Interruptor_3botoes.FCStd  Interruptor_Tomada_Media_1modulo_110v_com_simbologia.FCStd  Lampada.20250719-093952.FCBak  Lampada.FCStd  Tomada.20250718-140253.FCBak  asd.FCStd  (+10 more)
GuiComponents/: InsertComponents.ui
Tables/: tab_cabo_pvc_2_3.py
UI/: Cards.py  insert_circuit.py  insert_component.ui
config/: logging_config.py
core/: EletroGui.py  EletroUtils.py
docs/: TESTING-GUIDE.md
modelos/: tomadas.FCStd
tests/: conftest.py
utils/: ICON_MANAGER.md  create_group.py  icon_manager.py
(+68 files in other folders)
