[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "freecad.circuits"
dynamic = ["version"]
description = "Ferramenta para projetos elétricos e planejamento de quadros de comando"
readme = "README.md"
license = {file = "LICENSE"}
maintainers = [
    {name = "Losinskas", email = "llosinskas@gmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.10.0,<4.0",
    "numpy>=2.4.0,<3.0",
    "pandas>=3.0.2,<4.0",
    "reportlab>=4.5.0,<5.0",
    "sympy>=1.14.0,<2.0",
    "scipy>=1.17.1,<2.0",
]

[tool.setuptools]
packages = ["freecad", "freecad.Circuits"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "freecad.Circuits.version.__version__"}

[project.urls]
source = "https://github.com/llosinskas/Circuits-FreeCAD"